--- a/manifest.json
+++ b/manifest.json
@@ -1,1 +1,20 @@
-{"name": "SEERS Free Mode with VOC", "short_name": "SEERS Free", "start_url": ".", "display": "standalone"}
+{
+  "name": "SEERS' HOURLY FORECAST (Free)",
+  "short_name": "SEERS Free",
+  "start_url": "/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#4B0082",
+  "icons": [
+    {
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
+}
